RESOLVED FIXED311757
REGRESSION(309943@main): Crashing under WebViewImpl::startDrag() on sub-pixel drag images
https://bugs.webkit.org/show_bug.cgi?id=311757
Summary REGRESSION(309943@main): Crashing under WebViewImpl::startDrag() on sub-pixel...
Abrar Rahman Protyasha
Reported 2026-04-08 14:07:19 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2026-04-08 14:25:52 PDT
EWS
Comment 2 2026-04-09 00:35:21 PDT
Committed 310831@main (1ebe546b649d): <https://commits.webkit.org/310831@main> Reviewed commits have been landed. Closing PR #62299 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.